--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -5,3 +5,13 @@ amplify-authenticator {
   justify-content: center;
   height: 100vh;
 }
+
+button {
+  margin: 0.5rem;
+  border-radius: 0.6rem;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
