--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="col-md-12">
           <h1>Welcome {{ user.username }}</h1>
-          <button mat-raised-button routerLink="/mentor">Check Mentor list</button>
+<!--          <button mat-raised-button routerLink="/mentor">Check Mentor list</button>-->
           <button mat-raised-button (click)="signOut()">Sign Out</button>
         </div>
       </div>
